# yolos

./: .dockerignore  .gcloudignore  .gitignore  Dockerfile  README.md  cloudbuild.sh  cloudbuild.yaml  package.xml  setup.cfg  setup.py
.github/workflows/: build.yaml
<name>/: <name>.py
yolos/: yolos.py
